Sandbox7/AIONoStartupBannerPrerollAdsNoCommercialsver123934/errs.txt
ld: warning: -multiply_defined is obsolete
warning: no debug symbols in executable (-arch arm64e)
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/strip: warning: input object file already stripped: /Users/az/Desktop/sinfool/Sandbox7/AIONoStartupBannerPrerollAdsNoCommercialsver123934/.theos/obj/arm64e/AIONoStartupBannerPrerollAdsNoCommercialsver123934.dylib
[1mTweak.xm:27:552: [0m[0;1;31merror: [0m[1munknown type name 'GADAdSize'[0m
static CWSplashScreenStaticImage* (*_logos_orig$_ungrouped$CWSplashScreenStaticImage$initRemoteImageWithDuration$)(_LOGOS_SELF_TYPE_INIT CWSplashScreenStaticImage*, SEL, unsigned int) _LOGOS_RETURN_RETAINED; static CWSplashScreenStaticImage* _logos_method$_ungrouped$CWSplashScreenStaticImage$initRemoteImageWithDuration$(_LOGOS_SELF_TYPE_INIT CWSplashScreenStaticImage*, SEL, unsigned int) _LOGOS_RETURN_RETAINED; static void (*_logos_orig$_ungrouped$GADBannerView$setAdSize$andReload$)(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); static void _logos_method$_ungrouped$GADBannerView$setAdSize$andReload$(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); static unsigned char (*_logos_orig$_ungrouped$com_ds_ads_AdManager$getCanPlayPreroll)(_LOGOS_SELF_TYPE_NORMAL com_ds_ads_AdManager* _LOGOS_SELF_CONST, SEL); static unsigned char _logos_method$_ungrouped$com_ds_ads_AdManager$getCanPlayPreroll(_LOGOS_SELF_TYPE_NORMAL com_ds_ads_AdManager* _LOGOS_SELF_CONST, SEL); static int (*_logos_orig$_ungrouped$com_ds_metadata_AdBreak$getStartTime)(_LOGOS_SELF_TYPE_NORMAL com_ds_metadata_AdBreak* _LOGOS_SELF_CONST, SEL); static int _logos_method$_ungrouped$com_ds_metadata_AdBreak$getStartTime(_LOGOS_SELF_TYPE_NORMAL com_ds_metadata_AdBreak* _LOGOS_SELF_CONST, SEL); 
[0;1;32m                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       ^
[0m[1mTweak.xm:27:705: [0m[0;1;31merror: [0m[1munknown type name 'GADAdSize'[0m
static CWSplashScreenStaticImage* (*_logos_orig$_ungrouped$CWSplashScreenStaticImage$initRemoteImageWithDuration$)(_LOGOS_SELF_TYPE_INIT CWSplashScreenStaticImage*, SEL, unsigned int) _LOGOS_RETURN_RETAINED; static CWSplashScreenStaticImage* _logos_method$_ungrouped$CWSplashScreenStaticImage$initRemoteImageWithDuration$(_LOGOS_SELF_TYPE_INIT CWSplashScreenStaticImage*, SEL, unsigned int) _LOGOS_RETURN_RETAINED; static void (*_logos_orig$_ungrouped$GADBannerView$setAdSize$andReload$)(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); static void _logos_method$_ungrouped$GADBannerView$setAdSize$andReload$(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST, SEL, GADAdSize, BOOL); static unsigned char (*_logos_orig$_ungrouped$com_ds_ads_AdManager$getCanPlayPreroll)(_LOGOS_SELF_TYPE_NORMAL com_ds_ads_AdManager* _LOGOS_SELF_CONST, SEL); static unsigned char _logos_method$_ungrouped$com_ds_ads_AdManager$getCanPlayPreroll(_LOGOS_SELF_TYPE_NORMAL com_ds_ads_AdManager* _LOGOS_SELF_CONST, SEL); static int (*_logos_orig$_ungrouped$com_ds_metadata_AdBreak$getStartTime)(_LOGOS_SELF_TYPE_NORMAL com_ds_metadata_AdBreak* _LOGOS_SELF_CONST, SEL); static int _logos_method$_ungrouped$com_ds_metadata_AdBreak$getStartTime(_LOGOS_SELF_TYPE_NORMAL com_ds_metadata_AdBreak* _LOGOS_SELF_CONST, SEL); 
[0;1;32m                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                ^
[0m[1mTweak.xm:11:164: [0m[0;1;31merror: [0m[1munknown type name 'GADAdSize'[0m
static void _logos_method$_ungrouped$GADBannerView$setAdSize$andReload$(_LOGOS_SELF_TYPE_NORMAL GADBannerView* _LOGOS_SELF_CONST __unused self, SEL __unused _cmd, GADAdSize arg1, BOOL arg2) {
[0;1;32m                                                                                                                                                                   ^
[0m3 errors generated.
make[3]: *** [/Users/az/theos/makefiles/instance/rules.mk:313: /Users/az/Desktop/sinfool/Sandbox7/AIONoStartupBannerPrerollAdsNoCommercialsver123934/.theos/obj/arm64/Tweak.mm.29f8ac0a.o] Error 1
make[2]: *** [/Users/az/theos/makefiles/instance/library.mk:51: /Users/az/Desktop/sinfool/Sandbox7/AIONoStartupBannerPrerollAdsNoCommercialsver123934/.theos/obj/arm64/AIONoStartupBannerPrerollAdsNoCommercialsver123934.dylib] Error 2
make[1]: *** [/Users/az/theos/makefiles/instance/library.mk:37: internal-library-all_] Error 2
make: *** [/Users/az/theos/makefiles/master/rules.mk:146: AIONoStartupBannerPrerollAdsNoCommercialsver123934.all.tweak.variables] Error 2
